--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8091
 spring.jpa.database=MYSQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/RECIPE_WHIZZ?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:52151/railway?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=2D2C-Cd5A4achafHaB2HDEhb64aEbeD1
+spring.jpa.hibernate.ddl-auto=update
