--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-server.port=8091
-spring.jpa.database=MYSQL
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:52151/railway?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:21025/railway?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=2D2C-Cd5A4achafHaB2HDEhb64aEbeD1
+spring.datasource.password=6EcCEh2g3-3hEEg3DabE3H61bbHH-DBG
 spring.jpa.hibernate.ddl-auto=update
